[package]
name = "ar"
version = "0.5.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "A library for encoding/decoding Unix archive files."
repository = "https://github.com/mdsteele/rust-ar"
documentation = "http://mdsteele.github.io/rust-ar/"
keywords = ["ar", "archive", "deb"]
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1"
