[package]
name = "ar"
edition = "2018"
version = "0.8.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "A library for encoding/decoding Unix archive files."
repository = "https://github.com/mdsteele/rust-ar"
keywords = ["ar", "archive", "deb"]
license = "MIT"
readme = "README.md"

[dev-dependencies]
proptest = "0.10"
rand = "0.7"
rand_pcg = "0.2"
itertools = "0.9"
pretty_assertions = "0.6"
cc = "1.0"
platforms = "0.2"
assert_cmd = "1.0"
indoc = "0.3"
tempfile = "3.1"
